// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom rendering empty 1`] = `"<div><span>Nope, nothing to display</span></div>"`;

exports[`custom rendering with entries 1`] = `
"<div>
  <ul class=\\"timeline\\">
    <li>Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</li>
    <li>Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.
      Sit facilis vitae sapiente. Placeat est qui et.</li>
    <li>Corrupti <strong>reiciendis</strong> laboriosam repellat adipisci quis.

      Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</li>
    <li></li>
  </ul>
</div>"
`;

exports[`empty history 1`] = `"<p>no_entry</p>"`;

exports[`horizontal history 1`] = `
"<div>
  <ul class=\\"timeline timeline-horizontal\\">
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 06/04/2021 16:23 - <span class=\\"glyphicon glyphicon-user\\"></span> John Doe</h3>
        </div>
        <div class=\\"timeline-body\\">Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 03/04/2021 16:23 - <span class=\\"glyphicon glyphicon-user\\"></span> Alice Smith</h3>
        </div>
        <div class=\\"timeline-body\\">Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.
          Sit facilis vitae sapiente. Placeat est qui et.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 01/04/2021 08:23 - <span class=\\"glyphicon glyphicon-user\\"></span> Bob Martin</h3>
        </div>
        <div class=\\"timeline-body\\">Corrupti <strong>reiciendis</strong> laboriosam repellat adipisci quis.

          Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 28/03/2021 10:00 - <span class=\\"glyphicon glyphicon-user\\"></span> John Doe</h3>
        </div>
        <div class=\\"timeline-body\\"></div>
      </div>
    </li>
  </ul>
</div>"
`;

exports[`vertical history 1`] = `
"<div>
  <ul class=\\"timeline\\">
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 06/04/2021 16:23 - <span class=\\"glyphicon glyphicon-user\\"></span> John Doe</h3>
        </div>
        <div class=\\"timeline-body\\">Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 03/04/2021 16:23 - <span class=\\"glyphicon glyphicon-user\\"></span> Alice Smith</h3>
        </div>
        <div class=\\"timeline-body\\">Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.
          Sit facilis vitae sapiente. Placeat est qui et.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 01/04/2021 08:23 - <span class=\\"glyphicon glyphicon-user\\"></span> Bob Martin</h3>
        </div>
        <div class=\\"timeline-body\\">Corrupti <strong>reiciendis</strong> laboriosam repellat adipisci quis.

          Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</div>
      </div>
    </li>
    <li class=\\"timeline-item\\">
      <div class=\\"timeline-badge\\"></div>
      <div class=\\"timeline-panel\\">
        <div class=\\"timeline-heading\\">
          <h3 class=\\"h4\\"><span class=\\"glyphicon glyphicon-time\\"></span> 28/03/2021 10:00 - <span class=\\"glyphicon glyphicon-user\\"></span> John Doe</h3>
        </div>
        <div class=\\"timeline-body\\"></div>
      </div>
    </li>
  </ul>
</div>"
`;
